--- a/config.cfg
+++ b/config.cfg
@@ -1,5 +1,12 @@
 [SofarInverter]
 inverter_ip=192.168.*.*
 inverter_port=8899
-inverter_sn=17998****
+inverter_sn=23098****
 verbose=0
+
+register_start1=0x0480
+register_end1=0x04BC
+register_start2=0x0580
+register_end2=0x05B3
+registerhw_start=0x680
+registerhw_end=0x069B
